<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Scoreboard</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help &amp; feedback</string>
    <string name="action_archive">Archive</string>
    <string name="action_delete">Delete</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_restore">Restore</string>
    <string name="action_delete_forever">Delete forever</string>
    <string name="action_blank">New blank</string>
    <string name="action_start">Start</string>
    <string name="action_send">Send</string>
    <string name="action_rematch">Rematch</string>
    <string name="action_history">History</string>
    <string name="action_select_all">Select all</string>
    <string name="action_stop_all">Stop all</string>
    <string name="action_undo_all">Undo all</string>

    <string name="title_activity_archive">Archive</string>
    <string name="title_activity_games">Games</string>
    <string name="title_activity_game_new">New game</string>
    <string name="title_activity_score">Score</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_help">Help &amp; feedback</string>
    <string name="title_activity_trash">Trash</string>

    <string name="draw_open">Open</string>
    <string name="draw_close">Close</string>

    <string name="empty_header_games">Nothing in Games</string>
    <string name="empty_header_archive">Nothing in Archive</string>
    <string name="empty_header_trash">Nothing in Trash</string>
    <string name="empty_text_games">Click button below to start a new game</string>
    <string name="empty_text_archive">Games archived will show up here</string>
    <string name="empty_text_trash">Games moved to Trash will show up here</string>

    <string name="default_image">No Image</string>
    <string name="text_new_player">Add player</string>
    <string name="feedback_hint">Write your feedback</string>
    <string name="feedback_check">Include screenshot and logs</string>
    <string name="feedback_note">Your feedback, system information and email address will be sent to the developer.</string>
    <string name="mailto_email">mailto:tnt1232007@gmail.com</string>
    <string name="email_from">From:</string>
    <string name="email_subject">[Scoreboard Support] &lt;Subject&gt;</string>
    <string name="email_content">&lt;Description&gt;</string>
    <string name="screenshot_caption">Touch to preview</string>
    <string name="preview_caption">Touch to close</string>
    <string name="button_stop">Stop</string>
    <string name="button_undo">Undo</string>
    <string name="title_label">Title</string>
    <string name="game_title">Poker</string>
    <string name="starting_label">Starting Score</string>
    <string name="ending_label">Ending Score</string>
    <string name="info_label">Info</string>
    <string name="state_label">State</string>
    <string name="created_label">Created Date</string>
    <string name="rounds_label">Rounds</string>
    <string name="current_label">Current</string>
    <string name="start_score">0</string>
    <string name="end_score">100</string>
    <string name="participant_label">Participants</string>
    <string name="infinite_on">Game plays infinitely</string>
    <string name="infinite_off">Game ends at ending score</string>
    <string name="win_on">Player reaches ending score win</string>
    <string name="win_off">Player reaches ending score lose</string>
    <string name="swipe_refresh">Swipe down to show all participants</string>

    <string name="developer">TNT</string>
    <string name="developer_email">tnt1232007@gmail.com</string>
</resources>
