<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tnt.scoreboard.GameNewActivity">
    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_action_restore"
        android:title="@string/action_restore"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_action_archive"
        android:title="@string/action_archive"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_forever"
        android:title="@string/action_delete_forever" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help" />
</menu>