<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tnt.scoreboard.HelpFeedbackActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/labelFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/email_from"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/emailFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/labelFrom"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/labelFrom"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorLink"
            tools:text="albert.einstein@gmail.com" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailFrom"
            android:layout_marginBottom="16dp"
            android:hint="@string/feedback_hint"
            android:inputType="textMultiLine|textEmailSubject" />

        <CheckBox
            android:id="@+id/feedbackCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailText"
            android:layout_marginBottom="16dp"
            android:checked="true"
            android:text="@string/feedback_check" />

        <TextView
            android:id="@+id/note"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/feedbackCheck"
            android:text="@string/feedback_note"
            android:textAppearance="?android:attr/textAppearance" />

        <RelativeLayout
            android:id="@+id/screenshotLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/feedbackCheck"
            android:layout_toLeftOf="@+id/note">

            <ImageView
                android:id="@+id/screenshot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/screenshotCaption"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/default_image" />

            <TextView
                android:id="@+id/screenshotCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/screenshot_caption"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/previewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_margin="10dp"
        android:alpha="0"
        android:background="?android:attr/colorBackground"
        android:visibility="invisible"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/previewCaption"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/default_image" />

        <TextView
            android:id="@+id/previewCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/preview_caption"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>
</RelativeLayout>
